# vs-client

./: .gitignore  .gitmodules  ANDROID.md  BinCore.cpp  BinCore.h  CMakeLists.txt  README.md  TODO.md  capture.cpp  display.cpp  qmlCapture.cpp  qmlDisplay.cpp  qmlDisplayBridge.cpp  qmlDisplayModel.cpp  vsc.cpp
Client/: Client.cpp  Client.h  JwtToken.cpp  JwtToken.h  KratosSessionToken.cpp  KratosSessionToken.h  Settings.cpp  Settings.h  VenueShot.cpp  VenueShot.h
Client/Api/: AcquireToken.cpp  AcquireToken.h  BasicEndpoint.cpp  BasicEndpoint.h  Endpoint.cpp  Endpoint.h  GetVenue.cpp  GetVenue.h  GetVenuePictures.cpp  GetVenuePictures.h  KratosAuthenticate.cpp  KratosAuthenticate.h  KratosStartFlow.cpp  KratosStartFlow.h  LinkPicture.cpp  LinkPicture.h  PostPicture.cpp  PostPicture.h
Client/Model/: BasicEntity.cpp  BasicEntity.h  SlideShow.cpp  SlideShow.h  Venue.cpp  Venue.h  VenuePicture.cpp  VenuePicture.h  VenuePictures.cpp  VenuePictures.h  VenuePicturesModel.cpp  VenuePicturesModel.h
Client/Widget/: CapturePublishWidget.cpp  CapturePublishWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  SelectVenueWidget.cpp  SelectVenueWidget.h  SlideShowWidget.cpp  SlideShowWidget.h  VenuePicturesWidget.cpp  VenuePicturesWidget.h  VenueWidget.cpp  VenueWidget.h
qml/: Loading.qml  Picture.qml  PictureSwitcher.qml  capture.qml  display.qml  displayBridge.qml
